Fixed alignment and font size for mobile view

--- a/styles/scp_advice_styles.css
+++ b/styles/scp_advice_styles.css
@@ -55,17 +55,6 @@
 
 /**
 =================================
- media query for a bigger screen
-=================================
-**/
-@media only screen and (min-width: 991px) {
-    /*#lifeWithAPet {*/
-    /*    margin-top: 10%;*/
-    /*}*/
-}
-
-/**
-=================================
  media query for a smaller screen
 =================================
 **/
